#54: update build file to include Mockito and remove jMockit and JUnit 4
Signed-off-by: Christopher Zhong <1946052+ChristopherZhong@users.noreply.github.com>